feat: add batch translate
